@@ -1,3 +1,9 @@
 SDL does not clear the return key properly when starting the game
 from a terminal. Simply press Return to update its state.
 
+SDL does not properly get curser position if switching from 
+fullscreen to Window and back. It's stuck to wrong 640x480 from
+window mode not allowing to reach the far end of the shooting range.
+No workaround known. Just decide whether to play in fullscreen or
+window and stick to it.
+
